# 2ship2harkinian

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  copy-existing-otrs.cmake  errors.txt  headers_updated_at.txt  run-clang-format.ps1  run-clang-format.sh  run-docker.sh  spec  undefined_syms.txt
mm/: .gitignore  CMakeLists.txt  spec  undefined_syms.txt
mm/.github/workflows/: ci.yml
mm/2s2h/: BenGui.cpp  BenGui.hpp  BenJsonConversions.hpp  BenMenuBar.cpp  BenMenuBar.h  BenPort.cpp  BenPort.h  Menu.cpp  Menu.h  ShipUtils.cpp  ShipUtils.h  SohGui.cpp  SohGui.hpp  SohMenuBar.cpp  SohMenuBar.h  UIWidgets.cpp  UIWidgets.hpp  dr_flac.h  dr_mp3.h  dr_wav.h  framebuffer_effects.c  framebuffer_effects.h  mixer.c  z_message_OTR.cpp  z_play_2SH.cpp  z_scene_2SH.cpp
mm/2s2h/BenGui/: BenGui.cpp  BenGui.hpp  BenInputEditorWindow.cpp  BenInputEditorWindow.h  BenMenuBar.cpp  BenMenuBar.cpp.BASE  BenMenuBar.cpp.REMOTE  BenMenuBar.h  HudEditor.cpp  HudEditor.h  Menu.cpp  Menu.h  SearchableMenuItems.h  SohInputEditorWindow.cpp  UIWidgets.cpp  UIWidgets.hpp
mm/2s2h/CustomItem/: CustomItem.cpp  CustomItem.h
mm/2s2h/CustomMessage/: CustomMessage.cpp  CustomMessage.h  ShipMessages.h
mm/2s2h/DeveloperTools/: ActorViewer.cpp  ActorViewer.h  BetterMapSelect.c  BetterMapSelect.h  CollisionViewer.cpp  CollisionViewer.h  DebugConsole.cpp  DeveloperTools.cpp  DeveloperTools.h  EventLog.cpp  EventLog.h  SaveEditor.cpp  SaveEditor.h  WarpPoint.cpp  WarpPoint.h  dlViewer.cpp  dlViewer.h
mm/2s2h/Enhancements/: DemoBehavior.cpp  Enhancements.cpp  Enhancements.h  mods.cpp  mods.h
mm/2s2h/Enhancements/Actor/: BankerDialogue.cpp  BankerDialogue.h
mm/2s2h/Enhancements/ArbitraryEquipmentSlots/: ArbitraryItemSlots.cpp  ArbitraryItemSlots.h  ArbitraryItemSlotsGUI.cpp  ArbitraryItemSlotsGUI.h  CarouselItemSlots.cpp  CarouselItemSlots.h  MultipleConfigs.cpp  MultipleConfigs.h  SlotState.cpp  SlotState.h
mm/2s2h/Enhancements/Audio/: AudioCollection.cpp  AudioCollection.h  AudioEditor.cpp  AudioEditor.h  AudioSeqQueue.cpp  AudioSeqQueue.h
mm/2s2h/Enhancements/Camera/: Camera.h  CameraInterpolationFixes.cpp  CameraInterpolationFixes.h  CameraUtils.h  DebugCam.cpp  DebugCam.h  FreeLook.cpp  FreeLook.h
mm/2s2h/Enhancements/Cheats/: Cheats.h  ElegyAnywhere.cpp  ElegyAnywhere.h  HookshotAnywhere.cpp  HookshotAnywhere.h  Infinite.cpp  Infinite.h  LongerFlowerGlide.cpp  MoonJump.cpp  MoonJump.h  OverrideTextExample.cpp  RealTimeSync.cpp  RealTimeSync.h  TimeStop.cpp  TimeStop.h  UnbreakableRazorSword.cpp  UnbreakableRazorSword.h  UnrestrictedItems.cpp  UnrestrictedItems.h
mm/2s2h/Enhancements/Clock/: TextBasedClock.cpp  TextBasedClock.h
mm/2s2h/Enhancements/CollisionViewer/: colViewer.cpp
mm/2s2h/Enhancements/Cutscenes/: CremiaHugs.cpp  CremiaHugs.h  Cutscenes.cpp  Cutscenes.h  HideTitleCards.cpp  HideTitleCards.h  SkipEntranceCutscenes.cpp  SkipEntranceCutscenes.h  SkipIntroSequence.cpp  SkipToFileSelect.cpp
mm/2s2h/Enhancements/Cycle/: BothLetterToMamaRewards.cpp  BothLetterToMamaRewards.h  Cycle.h  EndOfCycle.cpp  EndOfCycle.h  KeepExpressMail.cpp  SkipScarecrowSong.cpp  SkipScarecrowSong.h
mm/2s2h/Enhancements/Dialogue/: Dialogue.h  FastBankSelection.cpp
mm/2s2h/Enhancements/DifficultyOptions/: DifficultyOptions.h  DisableTakkuriSteal.cpp  DisableTakkuriSteal.h  (+2 more)
mm/2s2h/Extractor/: Extract.cpp  Extract.h  FastCrc32C.c  portable-file-dialogs.h
mm/2s2h/GameInteractor/: GameInteractor.cpp  GameInteractor.h
mm/2s2h/NameTag/: NameTag.cpp  NameTag.h
mm/2s2h/Network/: Network.cpp  Network.h  Sail.cpp  Sail.h
mm/2s2h/SaveManager/: BinarySaveConverter.cpp  SaveManager.cpp  SaveManager.h
mm/2s2h/search/: SearchMenu.h
mm/assets/: .gitignore  2s2h_assets.h
mm/assets/extractor/: Config.xml  Config_GC_JP.xml  Config_GC_US.xml  Config_N64_US.xml
mm/include/: align_asset_macro.h  alignment.h  audiothread_cmd.h  buffers.h  build.h  color.h  command_macros_base.h  event-control.h  fixed_point.h  functions.h  gfx.h  gfxprint.h  intent-control-types.h  irqmgr.h  listalloc.h  macros.h  message_data_static.h  scheduler.h  segment_symbols.h  seqcmd.h  sys_cfb.h  variables.h  z64.h  z64actor.h  z64audio.h  z64bgcheck.h  z64bombers_notebook.h  z64collision_check.h  z64effect.h  z64interface.h  z64item.h  z64jpeg.h  z64keyframe.h  z64math.h  z64message.h  z64player.h  z64prerender.h  z64save.h  z64scene.h  z64skybox.h  (+2 more)
mm/include/PR/: abi.h  controller.h  gbi.h  gs2dex.h  gu.h  mbi.h  os_ai.h  os_cache.h  os_cont.h  os_convert.h  os_exception.h  os_internal.h  os_libc.h  os_message.h  os_motor.h  os_pfs.h  os_pi.h  os_system.h  os_thread.h  os_time.h  os_vi.h  osint.h  piint.h  rdp.h  sptask.h  ultratypes.h  viint.h  xstdio.h
mm/include/audio/: heap.h  load.h  soundfont.h
mm/include/libc/: alloca.h  math.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdlib.h  string.h
mm/include/tables/: actor_table.h  gamestate_table.h  scene_table.h
mm/linux/: 2s2h.desktop  2s2h.sh.in
mm/macosx/: 2s2h-macos.sh.in  Info.plist.in
mm/src/audio/: code_8019AF00.c  sequence.c  session_config.c  sfx.c  voice_external.c  voice_internal.c
mm/src/boot/: boot_main.c  build.c.in  fault.c  fault_drawer.c  idle.c  irqmgr.c  viconfig.c  yaz0.c  z_std_dma.c
mm/src/buffers/: heaps.c
mm/src/code/: PreRender.c  TwoHeadArena.c  audio_thread_manager.c  c_keyframe.c  code_8010C1B0.c  code_8012EC80.c  game.c  graph.c  main.c  object_table.c  padmgr.c  sched.c  speed_meter.c  stubs.c  su_mtx.c  sys_cfb.c  sys_cmpdma.c  sys_flashrom.c  sys_math3d.c  sys_matrix.c  sys_rumble.c  sys_slowly.c  sys_ucode.c  title_setup.c  z_actor.c  z_actor_dlftbls.c  z_bgcheck.c  z_camera.c  z_collision_check.c  z_common_data.c  z_debug_display.c  z_demo.c  z_draw.c  z_eff_blure.c  z_eff_footmark.c  z_eff_shield_particle.c  z_eff_spark.c  z_effect_soft_sprite.c  z_effect_soft_sprite_dlftbls.c  z_en_item00.c  (+51 more)
mm/tools/: m2ctx.py  namefixer.py  progress.py
mm/tools/disasm/: files.txt
mm/tools/warnings_count/: warnings_build_current.txt
mm/windows/: Resource.rc  properties.h.in  resource.h
(+1954 files in other folders)
